--- a/angularapp1/src/app/updatestudent/updatestudent.component.css
+++ b/angularapp1/src/app/updatestudent/updatestudent.component.css
@@ -1,8 +1,11 @@
 body {
-  background-color: gray;
+  
+  background-image: url("https://cdn.pixabay.com/photo/2016/06/02/02/33/triangles-1430105_1280.png");
 }
 #academyBackground {
   background-color: gray;
+  background-image: url("https://images.pexels.com/photos/733852/pexels-photo-733852.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+
 }
 #academyHeader {
   display: flex;
@@ -10,8 +13,9 @@ body {
   align-items: center;
   width: 100%;
   height: 50px;
-  background-color: rgb(7, 155, 7);
+  background-color: rgb(5, 5, 5);
   padding: 10px;
+  font-size: 20px;
 }
 h2 {
   margin-left: 20px;
@@ -44,9 +48,19 @@ ul li button:hover {
 }
 #adminCourse {
   font-size: 20px;
+  color: antiquewhite;
 }
 #adminAcademy {
-  font-size: 17px;
+  font-size: 20px;
+  color: antiquewhite;
+}
+#adminAcademy {
+  font-size: 20px;
+  color: antiquewhite;
+}
+#adminStudent {
+  font-size: 20px;
+  color: antiquewhite;
 }
 h5 {
   display: flex;
@@ -63,6 +77,7 @@ h5 {
   border: none;
   background: none;
   margin-right: 20px;
+  color: antiquewhite;
 }
 
 #logout:hover {
@@ -115,10 +130,10 @@ h5 {
 .column2 {
   position: absolute;
   width: 55em;
-  background-color: lightgray;
+  background-color: rgba(211, 211, 211, 0.479);
   float: right;
-  bottom: 5px;
-  margin-left: 45%;
+  bottom: -40px;
+  margin-left: 40%;
 }
 #enroll {
   position: absolute;
