--- a/angularapp1/src/app/adminreview/adminreview.component.css
+++ b/angularapp1/src/app/adminreview/adminreview.component.css
@@ -1,6 +1,6 @@
 *{
     font-family: 'Roboto', sans-serif;
-    
+    background: fixed;
   }
   body 
   {
@@ -16,138 +16,141 @@
    
   }
 
-  #academyHeader{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height:50px;
-    background-color:green;
-
-  }
-  h2{
-    margin-left: 20px;
-  }
-  #academyList{
-    display: flex;
-    flex: 1;
-    justify-content: center;
-    
-  }
-  #academyBackground{
-    background-color: white;
-    width: 100%;
-    height:100%;
-    justify-content:center;
-    margin-top: 0em;
-    position: absolute;
-  }
-  #adminAcademy{
-    font-size: 20px;
-  }
-  h5{
-    display: flex;
-    align-items: center;
-    margin-top:50px ;
-    margin-left: 50%;
-    margin-bottom: 5%;
-    font-size: medium;
-    font-weight: bold;
-  }
-  
-  #academyLeft{
-    flex-direction: column;
-    justify-content: space-around;
-    margin-left: 40px;
-    float: left;
-    size: 10%;
-    height: 10%;
-  }
-
-  #academyLeft input{
-    width:330px;
-    height:50px;
-  }
-  #academyCenter input{
-    width:330px;
-    height:50px;
-  }
-  #academyCenter {
-    justify-content: center;
-    float: right;
-    margin-right:52%;
-  }
- 
-  #academyRight{
-    
-    right: 16px; 
-    margin-right: 27%;
-    border-radius:5%; 
-    position: absolute;
-  }
-
-  #academyRight input{
-    width:330px;
-    height:50px;
-  }
-  #addStudent{
-    border-radius: 9px;
-    
-  }
-  
-  ::placeholder{
-  
-    font-size: small;
-  }
-.column2
-{
-  position: absolute;
-   width: 29em;
-   background-color: lightgray;
-   border-radius: 8px;
-   float: right;
-   top: 9%;
-   margin-left: 54%;
-   font-size:105%;
-}
-
-.academyr{
-  right: 16px; 
-  margin-right: 2%;
-    border-radius:5%; 
-    position: absolute;
-}
-#addStu{
-  position: absolute;
-  margin-top: 27%;
-  margin-left:43%;
-  font-size: large;
-  width: 15%;
-  
-}
-#small{
- font-size: xx-large; color: blue;
-}  
-button:hover{
-  transition: all 0.3s ease;
-  background:white;
-  color:green;
-  font-weight: 470;
-}  
-li { cursor: pointer; }
-a { cursor: pointer; }
-
-#navli a:hover{
-  transition: all 0.3s ease;
-  color:green;
-}
-#logouticon button:hover{
-  transition: all 0.3s ease;
-  background:white;
-  color:green;
-  font-weight: 470;
-  font-family: 'Roboto', sans-serif ;
-}  
 .flex-container{
   display: inline;
+}
+*{
+  margin: 0px;
+  padding: 0px;
+  font-family: poppins;
+  box-sizing: border-box;
+}
+a{
+  text-decoration: none;
+}
+#testimonials{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width:100%;
+}
+
+.testimonial-box-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width:100%;
+}
+.testimonial-box{
+  width:500px;
+  box-shadow: 2px 2px 30px rgba(0,0,0,0.1);
+  background-color: #ffffff;
+  padding: 20px;
+  margin: 15px;
+  border-radius: 10px;
+  text-shadow: #252525;
+}
+.profile-img{
+  width:50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 10px;
+}
+.profile-img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.profile{
+  display: flex;
+  align-items: center;
+}
+.name-user{
+  display: flex;
+  flex-direction: column;
+}
+.name-user strong{
+  color: #3d3d3d;
+  font-size: 2rem;
+  letter-spacing: 0.5px;
+}
+.name-user span{
+  color: #979797;
+  font-size: 1rem;
+}
+.reviews{
+  color: black;
+}
+.box-top{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  color:aqua
+}
+.client-comment p{
+  font-size: 2rem;
+  color: #4b4b4b;
+}
+.testimonial-box:hover{
+  transform: translateY(-10px);
+  transition: all ease 0.3s;
+}
+
+@media(max-width:1060px){
+  .testimonial-box{
+      width:45%;
+      padding: 10px;
+  }
+}
+@media(max-width:790px){
+  .testimonial-box{
+      width:100%;
+  }
+  .testimonial-heading h1{
+      font-size: 1.4rem;
+  }
+}
+@media(max-width:340px){
+  .box-top{
+      flex-wrap: wrap;
+      margin-bottom: 10px;
+  }
+  .reviews{
+      margin-top: 10px;
+  }
+}
+::selection{
+  color: #ffffff;
+  background-color: #252525;
+}
+.star-icon{
+  padding-top:0px;
+}
+.star-icon input{
+  display: none;
+}
+.star-icon label{
+  font-size: 30px;
+color:goldenrod;
+padding: 10px;
+float: center;
+transition: all 0.2s ease;
+}
+
+#delete{
+  /* height: 30px;
+  width:30px; */
+  border:none;
+  float:right;
+  font-size: 30px;
+  padding:5px;
+  cursor: pointer;
+}
+#delete:hover{
+  color:red;
 }
