--- a/angularapp1/src/app/review/review.component.html
+++ b/angularapp1/src/app/review/review.component.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <br>
-                <button [disabled]="!reviewform.valid" (click)="login()" id="redirectHome" class="btn btn-success">SUBMIT</button>
+                <button [disabled]="!reviewform.valid" (click)="userreview()" id="redirectHome" class="btn btn-success">SUBMIT</button>
 
             </form>
         </div> 
