--- a/angularapp1/src/app/adminreview/adminreview.component.html
+++ b/angularapp1/src/app/adminreview/adminreview.component.html
@@ -23,7 +23,7 @@
         </div>  
         </div>
       </nav>
-      <body><section id="testimonials">
+      <body><section id="testimonials" *ngFor="let rev of review;  let i=index;">
         
         <!-- <div class="testimonial-heading">
             <span>Comments</span>
@@ -43,7 +43,7 @@
                         </div>
                         
                         <div class="name-user">
-                            <strong>Liam mendes</strong>
+                            <strong>{{rev.reviewName}}</strong>
                             <!-- <span>@liammendes</span> -->
                         </div>
                     </div>
@@ -63,7 +63,7 @@
                 </div>
                 
                 <div class="client-comment">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quaerat quis? Provident temporibus architecto asperiores nobis maiores nisi a. Quae doloribus ipsum aliquam tenetur voluptates incidunt blanditiis sed atque cumque.</p>
+                    <p>{{rev.reviewComment}}</p>
                 </div>
                 
                 <button id="delete" (click)="delete()" ><i class='fas fa-trash'></i></button> 
